# BSLE

./: .gitignore  CMakeLists.txt  README.md  builder.py
cmake/: build_utils.cmake  deps.cmake
include/: server.h  server_args.h  server_crypto.h  server_ctrl.h  server_db.h  server_file_api.h  server_init.h  server_main.h  server_sock.h  utils.h
src/client/: cli_parser.py  client.py  client_classes.py  client_ctrl.py  client_interactive.py  client_main.py  client_request.py  client_sock.py
src/server/: CMakeLists.txt  server.c  server_args.c  server_backend.c  server_backend.h  server_crypto.c  server_ctrl.c  server_db.c  server_file_api.c  server_init.c  server_main.c  server_sock.c  utils.c
test/: CMakeLists.txt
test/client_tests/: test_client_args.py
test/server_tests/: CMakeLists.txt  gtest_server_args.cpp  gtest_server_crypto.cpp  gtest_server_ctrl.cpp  gtest_server_db.cpp  gtest_server_file_api.cpp  gtest_server_hash.cpp  gtest_server_sock.cpp
