include(build_utils)

#
# Test the actual calculations between operands and test the parsing of the
# headers coming in
#
#add_executable(
#        test_sqlite
#        test_sqlite.c
#)
#
#target_link_libraries(
#        test_sqlite
#        PUBLIC
#        sqlite3
#)
#set_project_properties(test_sqlite "")